--- a/view/email-templates.html
+++ b/view/email-templates.html
@@ -42,7 +42,7 @@
 
   <br/>
 
-    <table width='700' border='0' cellspacing='0' cellpadding='0' align="center">
+    <!--table width='700' border='0' cellspacing='0' cellpadding='0' align="center">
  		<tr>
      <td colspan="2" bgcolor="#eb6540" style="display: flex;justify-content: space-between;align-items: center;">
     <p style="color:#fff;padding: 5px 10px;font-size: 20px;text-align: center;margin: 0;">Happy tech jobs Application</p>
@@ -100,7 +100,7 @@
    </tr>
     <tr><td><div id="tk-div"></div></td></tr>
     
-  </table>
+  </table-->
 
 </body>
 </html>
