--- a/view/sign-up.html
+++ b/view/sign-up.html
@@ -24,30 +24,48 @@
     <div class="container-fluid login-container">
             <div class="row">
                 <div class="col-4 mx-auto login-form-1 p-0">
-                    <form action="sign-in.php" method="post">
+                    <form action="sign-up.php" method="post">
                         <h3 class="mb-4">Welcome to Happy tech jobs</h3>
                         <?php
-                                if(!empty($this->login))
-                                if($this->login['error']['invalid']==1){?>
-                                <span id="danger">Invalid user name or password</span>
+                                if(!empty($error))
+                                {
+                                 if($error=='1'){   ?>
+                                <span id="danger">Password did not match</span>
                             <?php    
                             }
+                            else if($error=='2'){
+                            ?>
+                                <span id="danger">email already exist</span>
+                            <?php
+                        }
+                        }
                             ?>
                         <div class="form-group">
                         <label class="label-text m-0">User Name</label>
-                            <input type="text" class="form-control" name="email"placeholder="Please enter username *" value="" />
+                            <input type="text" class="form-control" name="name"placeholder="Please enter username *" value="" />
+                        </div>
+                        <div class="form-group">
+                        <label class="label-text m-0">Email Id</label>
+                            <input type="text" class="form-control" name="email"placeholder="Please enter email *" value="" />
                         </div>
                         <div class="form-group">
                         <label class="label-text m-0">Password</label>
                             <input type="password" class="form-control" placeholder="Please enter password *"  name="password"value="" />
                         </div>
+                        <div class="form-group">
+                        <label class="label-text m-0">Confirm Password</label>
+                            <input type="password" class="form-control" placeholder="confirm password *"  name="c_password"value="" />
+                        </div>
                         <div class="form-group pt-2 text-center">
-                           <input type="submit" class="btnSubmit"name="submit" value="Login" />
+                           <!input type="submit" class="btnSubmit"name="submit" value="Signup" />
+                           <button class="btn btn-primary" id="responceBtn" onclick="alert('Confirm Submit')";>
+                            Signup 
+                           </button>
                         </div>
 
                         <div class="form-group">
                             
-                            <a href="sign-up.php" class="ForgetPwd small">Don't have an account?</a>
+                            <a href="sign-in.php" class="ForgetPwd small">Already have an account?</a>
                         </div>
                     </form>
                 </div>
