--- a/view/header.html
+++ b/view/header.html
@@ -14,9 +14,9 @@
                   <li class="nav-item mx-4">
                      <a class="nav-link mp-text-primary" href="application-status.php">Application Status</a>
                   </li>
-                  <li class="nav-item mx-4">
+                  <!--li class="nav-item mx-4">
                      <a class="nav-link mp-text-primary" href="my-profile.php">My Profile</a>
-                  </li>
+                  </li-->
                   <?php 
                      if(!empty($_SESSION)){
                         if($_SESSION["User_id"]==NULL){?>
