--- a/view/sign-in.html
+++ b/view/sign-in.html
@@ -34,12 +34,12 @@
                             }
                             ?>
                         <div class="form-group">
-                        <label class="label-text m-0">User Name</label>
-                            <input type="text" class="form-control" name="email"placeholder="Please enter username *" value="" />
+                        <label class="label-text m-0">Email</label>
+                            <input type="text" class="form-control" name="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"placeholder="Please enter Email *" required value="" />
                         </div>
                         <div class="form-group">
                         <label class="label-text m-0">Password</label>
-                            <input type="password" class="form-control" placeholder="Please enter password *"  name="password"value="" />
+                            <input type="password" class="form-control" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" placeholder="Please enter password *" required name="password"value="" />
                         </div>
                         <div class="form-group pt-2 text-center">
                            <input type="submit" class="btnSubmit"name="submit" value="Login" />
