md5 added in login and signup

--- a/view/index.html
+++ b/view/index.html
@@ -28,7 +28,7 @@
                         </div>
                         <div class="text-para mx-5 px-5 py-3">
                            <p class="stay-secure-para">
-                              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                              Happy Tech jobs Application recruitment system for Generating Auto Feedback and sending it To Email-id Automatically
                            </p>
                         </div>
                         <div class="row">
