--- a/view/sign-in.html
+++ b/view/sign-in.html
@@ -41,6 +41,9 @@
                         <label class="label-text m-0">Password</label>
                             <input type="password" class="form-control" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" placeholder="Please enter password *" required name="password"value="" />
                         </div>
+                        <div class="form-group">
+                            <a href="" class="ForgetPwd small">Forgot Password?</a>
+                        </div>
                         <div class="form-group pt-2 text-center">
                            <input type="submit" class="btnSubmit"name="submit" value="Login" />
                         </div>
