--- a/view/index.html
+++ b/view/index.html
@@ -49,6 +49,15 @@
       </section>
       <!-- section one end -->
       <section class="position-relative py-2 my-2">
+         Sort BY:<select>
+            <option>Date</option>
+            <option>Experience</option>
+         </select>
+         <>:<select>
+            <option>Asc</option>
+            <option>Des</option>
+         </select>
+         
          <div class="container-fluid">
             <div class="row py-3">
                <?php
