--- a/view/index.html
+++ b/view/index.html
@@ -22,7 +22,8 @@
             <div class="row">
                <div class="col-12">
                   <div class="section-two-bg">
-                     <div class="text-group py-5 text-center">
+                     <div class="text-group py-5 text-center" style="background-position:center;background-repeat:no-repeat;background-image:url('images/backside.jpg')">
+                        <!img src="images/backside.jpg" style="margin:auto; width:200px;display:block" />
                         <div class="h1">
                            Online Happy Tech Jobs Application Recruitment System<span class="mp-text-secondary">.</span>
                         </div>
