--- a/view/index.html
+++ b/view/index.html
@@ -52,7 +52,7 @@
       <section class="position-relative py-2 my-2">
          Sort BY:<select>
             <option>Date</option>
-            <option>Experience</option>
+            <!option>Experience<!/option>
          </select>
          <>:<select>
             <option>Asc</option>
@@ -75,7 +75,7 @@
                      </div>
                      <div class="op-job-tech">
                         <div class="pr-2"><i class="fa fa-pencil" aria-hidden="true"></i></div>
-                        <div class="op-job-technologies">springboot,css,jsp,json,html,bootstrap,angularjs,javascript,jquery</div>
+                        <div class="op-job-technologies">Posted on:<?php echo $this->job_list[$i]['post_date']?></div>
                      </div>
                      <div class="op-job-tech">
                         <div class="pr-2"><i class="fa fa-file-text" aria-hidden="true"></i></div>
