--- a/view/application.html
+++ b/view/application.html
@@ -49,6 +49,7 @@
                      <div class="op-job-title">Email-Id : <?php echo $this->app_details[0]['user_details']['email_id'] ?></div>
                      <div class="op-job-title">Job Name: <?php echo $this->app_details[0]['job_details']['title'] ?></div>
                      <div class="op-job-companyName"><?php echo $this->app_details[0]['job_details']['company_name']; ?></div>
+                     <div class="op-job-companyName">Posted on:<?php echo $this->app_details[0]['job_details']['post_date']; ?></div>
                      <div class="op-job-details">
                         <div class="op-job-expr pd-around"><span><i class="fa fa-briefcase" aria-hidden="true"></i></span> <?php echo $this->app_details[0]['job_details']['required_experience'] ;?></div>
                         <div class="op-job-salary pd-around"><span><i class="fa fa-usd" aria-hidden="true"></i></span> Not Disclosed</div>
@@ -62,7 +63,7 @@
                   </div>
                      <div class="apply-job-btn-block my-3">
                         <label class="label-text m-0">View CV</label>
-                            <a href="view-cv.php?u_id=1"><buttonbutton class="btn btn-primary" id="view">CV</button></a>
+                            <a href="<?php echo $this->app_details[0]['cv_location']?>"><buttonbutton class="btn btn-primary" id="view">CV</button></a>
                         <form action="responce.php" method="post">
                            <div class="form-group">
                            <label class="label-text m-0">Select Template:</label>
