--- a/view/apply-job.html
+++ b/view/apply-job.html
@@ -48,6 +48,7 @@
                      <div class="op-job-expr pd-around" hidden="true" id="jod_id" value="<?php echo $this->job_details[0]['job_id'] ;?>"></div>
                      <div class="op-job-title"><?php echo $this->job_details[0]['title'] ?></div>
                      <div class="op-job-companyName"><?php echo $this->job_details[0]['company_name']; ?></div>
+                     <div class="op-job-companyName">Posted On:<?php echo $this->job_details[0]['post_date']; ?></div>
                      <div class="op-job-details">
                         <div class="op-job-expr pd-around"><span><i class="fa fa-briefcase" aria-hidden="true"></i></span> <?php echo $this->job_details[0]['required_experience'] ;?></div>
                         <div class="op-job-salary pd-around"><span><i class="fa fa-usd" aria-hidden="true"></i></span> Not Disclosed</div>
@@ -68,10 +69,12 @@
                            </ul>
                         </div>
                      </div>
+                     <input type="file" id="file-input" accept="application/pdf" />
+<button id="upload-button">Upload File</button>
                      <div class="apply-job-btn-block my-3">
-                        <button class="btn btn-primary" id="applyBtn" onclick=apply_job(<?php echo $_GET['job_id'] ?>)><?php  echo $btn_value;?></button>
+                        <?php if(!empty($this->cv)){ ?><button class="btn btn-primary" id="applyBtn" onclick=apply_job(<?php echo $_GET['job_id'] ?>)><?php  echo $btn_value;?></button>
                            <div class="op-job-tech">
-                        <?php if(!empty($this->apply_status)){ ?>
+                        <?php }if(!empty($this->apply_status)){ ?>
                            <div class="pr-2"><i class="fa fa-pencil" aria-hidden="true"></i></div>
                            <div class="op-job-technologies">
                               <?php echo date_format(date_create($this->apply_status[0]['applyed_time']),"d M Y") ;?>
@@ -116,5 +119,6 @@
       </section>
       <!-- Footer start from here -->
       <?php require_once 'view/footer_js.html';?>
+   
    </body>
 </html>
