--- a/view/footer_js.html
+++ b/view/footer_js.html
@@ -55,5 +55,70 @@
       }
     }
   }
+  document.querySelector('#upload-button').addEventListener('click', function() {
+  // user has not chosen any file
+  if(document.querySelector('#file-input').files.length == 0) {
+    alert('Error : No file selected');
+    return;
+  }
+
+  // first file that was chosen
+  let file = document.querySelector('#file-input').files[0];
+
+  // allowed types
+  let allowed_mime_types = [ 'application/pdf' ];
   
+  // allowed max size in MB
+  let allowed_size_mb = 4;
+  
+  // validate file type
+  if(allowed_mime_types.indexOf(file.type) == -1) {
+    alert('Error : Incorrect file type');
+    return;
+  }
+
+  // validate file size
+  if(file.size > allowed_size_mb*1024*1024) {
+    alert('Error : Exceeded size');
+    return;
+  }
+
+  // validation is successful
+  alert('You have chosen the file ' + file.name);
+  upload();
+  // upload file now
+});
+function upload(argument) {
+  // body...
+
+  let data = new FormData();
+
+// file selected by the user
+// in case of multiple files append each of them
+data.append('file', document.querySelector('#file-input').files[0]);
+
+let request = new XMLHttpRequest();
+request.open('POST', 'ajax.php'); 
+
+// upload progress event
+request.upload.addEventListener('progress', function(e) {
+  let percent_complete = (e.loaded / e.total)*100;
+  
+  // percentage of upload completed
+  console.log(percent_complete);
+});
+
+// AJAX request finished event
+request.addEventListener('load', function(e) {
+  // HTTP status message
+  console.log(request.status);
+
+  // request.response will hold the response from the server
+  console.log(request.response);
+});
+
+// send POST request to server side script
+request.send(data);
+window.location.reload();
+}
 </script>
