--- a/view/index.html
+++ b/view/index.html
@@ -20,19 +20,19 @@
       <section class="position-relative">
          <div class="container-fluid mp-sec-bg">
             <div class="row">
-               <div class="col-12">
+               <div class="col-12 p-0">
                   <div class="section-two-bg">
-                     <div class="text-group py-5 text-center" style="background-position:center;background-repeat:no-repeat;background-image:url('images/backside.jpg')">
+                     <div class="text-group py-5 text-center" style="background-position:center; background-size: cover;background-repeat:no-repeat;background-image:url('images/backside.jpg')">
                         <!img src="images/backside.jpg" style="margin:auto; width:200px;display:block" />
-                        <div class="h1">
+                        <div class="h1 text-white">
                            Online Happy Tech Jobs Application Recruitment System<span class="mp-text-secondary">.</span>
                         </div>
                         <div class="text-para mx-5 px-5 py-3">
-                           <p class="stay-secure-para">
+                           <p class="stay-secure-para text-white">
                               Happy Tech jobs Application recruitment system for Generating Auto Feedback and sending it To Email-id Automatically
                            </p>
                         </div>
-                        <div class="row">
+                        <div class="row no-gutters">
                            <div class="col-4 m-auto pt-3 pb-3">
                               <div class="job-search-div">
                                  <div class="form-group m-0">
@@ -58,6 +58,24 @@
             <option>Asc</option>
             <option>Des</option>
          </select>
+
+<!-- add condition as per above code  -->
+         <div class="container-fluid mp-sec-bg">
+            <div class="row">
+               <div class="col-3 ml-auto pt-3 pb-3">
+                      <div class="form-group">
+                        <label for="sel1">Sort By Date</label>
+                        <select class="form-control" id="sel1" name="sellist1">
+                          <option>1</option>
+                          <option>2</option>
+                          <option>3</option>
+                          <option>4</option>
+                        </select>
+                      </div>
+               </div>
+            </div>
+         </div>
+
          
          <div class="container-fluid">
             <div class="row py-3">
