--- a/view/header.html
+++ b/view/header.html
@@ -26,7 +26,7 @@
                   <?php }
                   else if($_SESSION["User_id"]!=NULL){?>
                   <li class="nav-item mx-4">
-                     <a class="nav-link mp-text-primary" href="sign-out.php">Sign OUT</a>
+                     <a class="nav-link mp-text-primary" href="sign-out.php">Sign Out</a>
                   </li>
                   <?php }}else{?>
                   <li class="nav-item mx-4">
