--- a/view/index.html
+++ b/view/index.html
@@ -50,15 +50,7 @@
       </section>
       <!-- section one end -->
       <section class="position-relative py-2 my-2">
-         Sort BY:<select>
-            <option>Date</option>
-            <!option>Experience<!/option>
-         </select>
-         <>:<select>
-            <option>Asc</option>
-            <option>Des</option>
-         </select>
-
+         
 <!-- add condition as per above code  -->
          <div class="container-fluid mp-sec-bg">
             <div class="row">
@@ -66,10 +58,9 @@
                       <div class="form-group">
                         <label for="sel1">Sort By Date</label>
                         <select class="form-control" id="sel1" name="sellist1">
-                          <option>1</option>
-                          <option>2</option>
-                          <option>3</option>
-                          <option>4</option>
+                          <option>Most Recently</option>
+                          <option>Last Month</option>
+                          <option>Old</option>
                         </select>
                       </div>
                </div>
