--- a/view/sign-in.html
+++ b/view/sign-in.html
@@ -39,12 +39,26 @@
                         </div>
                         <div class="form-group">
                         <label class="label-text m-0">Password</label>
-                            <input type="password" class="form-control" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" placeholder="Please enter password *" required name="password"value="" />
+                            <input type="password" class="form-control" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" placeholder="Please enter password *" id="txtNewPassword" required name="password"value="" />
                         </div>
                         <div id="confirm_password" class="form-group" hidden="" >
                         <label class="label-text m-0">Confirm Password</label>
-                            <input type="password" class="form-control" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" placeholder="Please confirm password *" name="c_password" value="" />
+                            <input type="password" class="form-control" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" placeholder="Please confirm password *" id="txtConfirmPassword" name="c_password" value="" />
                         </div>
+                        <div class="registrationFormAlert" style="color:green;" id="CheckPasswordMatch"></div>
+                        <script>
+                        function checkPasswordMatch() {
+                            var password = $("#txtNewPassword").val();
+                            var confirmPassword = $("#txtConfirmPassword").val();
+                            if (password != confirmPassword)
+                                $("#CheckPasswordMatch").html("Passwords does not match!");
+                            else
+                                $("#CheckPasswordMatch").html("Passwords match.");
+                        }
+                        $(document).ready(function () {
+                           $("#txtConfirmPassword").keyup(checkPasswordMatch);
+                        });
+                        </script>
                         <div id="ForgetPwdanc" class="form-group">
                             <a href="javascript:void(0);" class="ForgetPwd small"  onclick="ForgetPwd();">Forgot Password?</a>
                         </div>
