--- a/view/sign-up.html
+++ b/view/sign-up.html
@@ -50,12 +50,26 @@
                         </div>
                         <div class="form-group">
                         <label class="label-text m-0">Password</label>
-                            <input type="password" class="form-control" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" placeholder="Please enter password *" required name="password"value="" />
+                            <input type="password" class="form-control" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" placeholder="Please enter password *" required name="password" id="txtNewPassword" value="" />
                         </div>
                         <div class="form-group">
                         <label class="label-text m-0">Confirm Password</label>
-                            <input type="password" class="form-control" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"placeholder="confirm password *" required name="c_password"value="" />
+                            <input type="password" class="form-control" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"placeholder="confirm password *" required name="c_password" id="txtConfirmPassword" value="" />
                         </div>
+                        <div class="registrationFormAlert" style="color:green;" id="CheckPasswordMatch"></div>
+                        <script>
+                        function checkPasswordMatch() {
+                            var password = $("#txtNewPassword").val();
+                            var confirmPassword = $("#txtConfirmPassword").val();
+                            if (password != confirmPassword)
+                                $("#CheckPasswordMatch").html("Passwords does not match!");
+                            else
+                                $("#CheckPasswordMatch").html("Passwords match.");
+                        }
+                        $(document).ready(function () {
+                           $("#txtConfirmPassword").keyup(checkPasswordMatch);
+                        });
+                        </script>
                         <div class="form-group pt-2 text-center">
                            <!input type="submit" class="btnSubmit"name="submit" value="Signup" />
                            <button class="btn btn-primary" type="submit" name="submit" value="Signup" id="responceBtn" onclick="alert('Confirm Submit')";>
