--- a/view/footer_js.html
+++ b/view/footer_js.html
@@ -119,6 +119,6 @@ request.addEventListener('load', function(e) {
 
 // send POST request to server side script
 request.send(data);
-window.location.reload();
+//window.location.reload();
 }
 </script>
