--- a/view/apply-job.html
+++ b/view/apply-job.html
@@ -80,7 +80,7 @@
                         </div>
                         <div class="col-4 d-flex align-items-center align-items-right">
                            <div class="w-100">
-                               <button type="submit" class="btn-primary form-control w-100 m-auto" value="submit_login" name="submit" id="upload-button">Upload</button>
+                               <button type="button" class="btn-primary form-control w-100 m-auto" value="submit_login" name="upload" id="upload-button">Upload</button>
                            </div>
                         </div>
                      </div>
