--- a/view/footer_js.html
+++ b/view/footer_js.html
@@ -115,6 +115,7 @@ request.addEventListener('load', function(e) {
 
   // request.response will hold the response from the server
   console.log(request.response);
+  $('#file_responce').text(request.response);
 });
 
 // send POST request to server side script
