--- a/view/sign-in.html
+++ b/view/sign-in.html
@@ -41,6 +41,7 @@
                         <label class="label-text m-0">Password</label>
                             <input type="password" class="form-control" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" placeholder="Please enter password *" id="txtNewPassword" required name="password"value="" />
                         </div>
+                        <span style="font-size: 70%;color:red;">Passwords must contain at least 8 characters, including uppercase, lowercase letters and numbers.</span>
                         <div id="confirm_password" class="form-group" hidden="" >
                         <label class="label-text m-0">Confirm Password</label>
                             <input type="password" class="form-control" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" placeholder="Please confirm password *" id="txtConfirmPassword" name="c_password" value="" />
